--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
     "name" : "package",
     "version" : "0.0.0",
-    "dependencies" : {}
+    "dependencies" : {
+        "jquery" : "2.1.0",
+        "semantic-ui" : "0.13.0"
+    }
 }
 
